Second Release - Image Updated

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row mt-2">
         <div class="col-3">
-            <img width="100%" height="200" border="1">
+            <img src="images/fashion2.jpg" width="100%" height="200" border="1">
         </div>
         <div class="col-7">
             <a href="public/template.html">My HTML Templates</a>
